--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <body>
     <link rel="stylesheet" href="styles.css">
     <h1>  Devops Engineering website  </h1>
-    <p>   Devops Engineering isn't just a role that an employee can work on, It's a mindset that a Developer/Operation employee should have, Some of the important tools of devops automation are:  </p>
+    <p>   DevOps is the combination of cultural philosophies, practices, and tools that increases an organization’s ability to deliver applications and services at high velocity: evolving and improving products at a faster pace than organizations using traditional software development and infrastructure management processes. This speed enables organizations to better serve their customers and compete more effectively in the market. Some of the important tools of devops automation are:  </p>
     <ol>  
         <li>     <a href="https://www.ansible.com/">ansible</a>                  </li>
         <li>    <a href="https://www.terraform.io/">terraform</a>                </li>
@@ -12,6 +12,6 @@
     </ol>
     <a data-flickr-embed="true" href="https://www.flickr.com/photos/201320602@N02" title="Devops cycle and important tools"><img src="https://live.staticflickr.com/65535/53954840795_f9b1fdcc97_z.jpg" width="400" height="300" alt=""/></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
     <p>  Click <a href="https://aws.amazon.com/devops/what-is-devops/">here</a> for more information about devops.   </p>
-    <p>   I hope you had good grasp about devops, Good luck on your Devopsing journey!  </p>
+    <p>  Devops Engineering isn't just a role that an employee can work on, It's a mindset that a Developer/Operation employee should have, I hope you had good grasp about devops, Good luck on your Devopsing journey!  </p>
 </body>
 </html>
